--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - Style Bootstrap Template</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>Aishi Singha Roy – Personal Website</title>
+  <meta name="description" content="Portfolio and public profile of Aishi Singha Roy – healthcare leader, hospital director, and public service advocate.">
+  <meta name="keywords" content="Aishi Singha Roy, Apollo Hospital Bardhaman, Public Health, NGO, ABCD Trust, Bengal Healthcare">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -15,26 +15,22 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesh¬øeet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Style
-  * Template URL: https://bootstrapmade.com/style-bootstrap-portfolio-template/
-  * Updated: Jul 02 2025 with Bootstrap v5.3.7
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+  <!-- Template Info -->
+  <!-- Template Name: Style by BootstrapMade -->
+  <!-- Updated: Jul 02 2025 with Bootstrap v5.3.7 -->
 </head>
 
 <body class="index-page">
@@ -43,30 +39,23 @@
     <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.webp" alt=""> -->
-        <!-- Uncomment the line below if you also wish to use an text logo -->
-        <!-- <h1 class="sitename">Style</h1>  -->
       </a>
 
       <nav id="navmenu" class="navmenu">
 
         <div class="profile-img">
-          <img src="assets/img/profile/profile-square-1.webp" alt="" class="img-fluid rounded-circle">
+          <img src="https://raw.githubusercontent.com/sagnikmitra/pr-testing/main/AISHI%20SINGHA%20ROY%20CV.png" alt="Aishi Singha Roy" class="img-fluid rounded-circle">
         </div>
 
         <a href="index.html" class="logo d-flex align-items-center justify-content-center active">
-          <!-- Uncomment the line below if you also wish to use an image logo -->
-          <!-- <img src="assets/img/logo.webp" alt=""> -->
-          <h1 class="sitename">Alex Smith</h1>
+          <h1 class="sitename">Aishi Singha Roy</h1>
         </a>
 
         <div class="social-links text-center">
-          <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-          <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
           <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="mailto:aishigd@gmail.com" class="email"><i class="bi bi-envelope-at"></i></a>
         </div>
 
         <ul>
@@ -74,24 +63,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#resume">Resume</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#services">Services</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
-            </ul>
-          </li>
+          <li><a href="#services">Initiatives</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -576,6 +548,87 @@
   </div>
 </section><!-- /Resume Section -->
 
+<!-- Services Section -->
+<section id="services" class="services section">
+
+  <!-- Section Title -->
+  <div class="container section-title">
+    <h2>Initiatives</h2>
+    <p>Driving impact through integrated healthcare, rural development, and social upliftment initiatives.</p>
+  </div><!-- End Section Title -->
+
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <div class="row g-4">
+
+      <!-- Card 1 -->
+      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+        <div class="service-item">
+          <div class="icon">
+            <i class="bi bi-hospital"></i>
+          </div>
+          <h3>Burdwan Apollo Hospital</h3>
+          <p>Leading a premier multi-speciality hospital providing quality and affordable healthcare across Purba Bardhaman and surrounding regions.</p>
+        </div>
+      </div><!-- End Initiative Item -->
+
+      <!-- Card 2 -->
+      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+        <div class="service-item">
+          <div class="icon">
+            <i class="bi bi-capsule"></i>
+          </div>
+          <h3>Apollo Medpharma</h3>
+          <p>Pharmaceutical retail and distribution initiative to streamline medicine delivery from wholesale to doorstep for rural patients.</p>
+        </div>
+      </div><!-- End Initiative Item -->
+
+      <!-- Card 3 -->
+      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+        <div class="service-item">
+          <div class="icon">
+            <i class="bi bi-truck"></i>
+          </div>
+          <h3>Belleview Healthcare Logistics</h3>
+          <p>End-to-end supply chain infrastructure to support medicine, equipment, and diagnostic delivery across block-level healthcare centers.</p>
+        </div>
+      </div><!-- End Initiative Item -->
+
+      <!-- Card 4 -->
+      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+        <div class="service-item">
+          <div class="icon">
+            <i class="bi bi-people"></i>
+          </div>
+          <h3>ABCD Trust</h3>
+          <p>Public charitable NGO focused on women's empowerment, rural health camps, and education access across underserved regions of Bengal.</p>
+        </div>
+      </div><!-- End Initiative Item -->
+
+      <!-- Card 5 -->
+      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+        <div class="service-item">
+          <div class="icon">
+            <i class="bi bi-mortarboard"></i>
+          </div>
+          <h3>Health & Education Drives</h3>
+          <p>Conducting free health checkups, awareness sessions, and educational programs in rural schools and block-level community centers.</p>
+        </div>
+      </div><!-- End Initiative Item -->
+
+      <!-- Card 6 -->
+      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+        <div class="service-item">
+          <div class="icon">
+            <i class="bi bi-globe"></i>
+          </div>
+          <h3>Integrated Rural Healthcare Network</h3>
+          <p>Creating a digitally connected healthcare ecosystem across 330 blocks in Bengal with centralized patient records and pharmacy integration.</p>
+        </div>
+      </div><!-- End Initiative Item -->
+
+    </div>
+  </div>
+</section><!-- /Services Section -->
 
     <!-- Contact Section -->
 <section id="contact" class="contact section light-background">
