--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <div class="about-content">
           <div class="intro">
             <h2>Hi, I'm Aishi Singha Roy</h2>
-            <p>Currently operating Burdwan Apollo Hospital, a leading multi-speciality healthcare centre, and leading integrated healthcare initiatives under The Apollo Ltd., including Apollo Medpharma and Belleview Healthcare. I also serve as the President of ABCD Trust, focusing on rural health, women empowerment, and education across Bengal.</p>
+            <p>Currently operating Burdwan Apollo Hospital, a leading multi-speciality healthcare centre, and leading integrated healthcare initiatives under The Apollo Ltd., including Apollo Medpharma and Bellview Healthcare. I also serve as the President of ABCD Trust, focusing on rural health, women empowerment, and education across Bengal.</p>
           </div>
 
           <div class="skills-grid">
@@ -588,7 +588,7 @@
           <div class="icon">
             <i class="bi bi-truck"></i>
           </div>
-          <h3>Belleview Healthcare Logistics</h3>
+          <h3>Bellview Healthcare Logistics</h3>
           <p>End-to-end supply chain infrastructure to support medicine, equipment, and diagnostic delivery across block-level healthcare centers.</p>
         </div>
       </div><!-- End Initiative Item -->
@@ -724,27 +724,21 @@
   </main>
 
   <footer id="footer" class="footer dark-background">
-
-    <div class="container">
-      <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Style</strong> <span>All Rights Reserved</span></p>
-      </div>
-      <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+  <div class="container">
+    <div class="copyright text-center">
+      <p>© <span>2025</span> <strong class="px-1 sitename">Aishi Singha Roy</strong> <span>All Rights Reserved</span></p>
     </div>
+    <div class="social-links d-flex justify-content-center">
+      <a href="#"><i class="bi bi-linkedin"></i></a>
+      <a href="#"><i class="bi bi-instagram"></i></a>
+      <a href="mailto:aishigd@gmail.com"><i class="bi bi-envelope-at"></i></a>
+    </div>
+    <div class="credits text-center">
+      <span>Website powered by Zephyrus Studio | Baselined by Bootstrapmade | Customized for public healthcare & impact initiatives in Bengal</span>
+    </div>
+  </div>
+</footer>
 
-  </footer>
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
