--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Aishi Singha Roy – Personal Website</title>
-  <meta name="description" content="Portfolio and public profile of Aishi Singha Roy – healthcare leader, hospital director, and public service advocate.">
-  <meta name="keywords" content="Aishi Singha Roy, Apollo Hospital Bardhaman, Public Health, NGO, ABCD Trust, Bengal Healthcare">
+  <title>Aishi Ghosh Dastidar – Personal Website</title>
+  <meta name="description" content="Portfolio and public profile of Aishi Ghosh Dastidar – healthcare leader, hospital director, and public service advocate.">
+  <meta name="keywords" content="Aishi Ghosh Dastidar, Apollo Hospital Bardhaman, Public Health, NGO, ABCD Trust, India Healthcare">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -45,11 +45,11 @@
       <nav id="navmenu" class="navmenu">
 
         <div class="profile-img">
-          <img src="https://raw.githubusercontent.com/sagnikmitra/pr-testing/main/AISHI%20SINGHA%20ROY%20CV.png" alt="Aishi Singha Roy" class="img-fluid rounded-circle">
+          <img src="https://raw.githubusercontent.com/sagnikmitra/pr-testing/main/AISHI%20SINGHA%20ROY%20CV.png" alt="Aishi Ghosh Dastidar" class="img-fluid rounded-circle">
         </div>
 
         <a href="index.html" class="logo d-flex align-items-center justify-content-center active">
-          <h1 class="sitename">Aishi Singha Roy</h1>
+          <h1 class="sitename">Aishi Ghosh Dastidar</h1>
         </a>
 
         <div class="social-links text-center">
@@ -82,7 +82,7 @@
 
           <div class="col-lg-6 hero-content" data-aos="fade-right" data-aos-delay="100">
             <div class="content-wrapper">
-              <h1 class="hero-title">Aishi Singha Roy<br><span class="typed" data-typed-items="Founder, Entreprene¬øur, Social Worker, Leader"></span></h1>
+              <h1 class="hero-title">Aishi Ghosh Dastidar<br><span class="typed" data-typed-items="Founder, Entreprene¬øur, Social Worker, Leader"></span></h1>
               <p class="lead">Healthcare entrepreneur and social worker from Bardhaman with 10+ years’ experience in hospital administration and healthcare leadership.</p>
 
               <div class="hero-stats" data-aos="fade-up" data-aos-delay="200">
@@ -145,7 +145,7 @@
 
   <div class="container section-title">
     <h2>About</h2>
-    <p>CARE. CLARITY. COMMITMENT. For Every Corner of Bengal.</p>
+    <p>CARE. CLARITY. COMMITMENT. For Every Corner of India.</p>
   </div>
 
   <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -154,10 +154,10 @@
       <div class="col-lg-5" data-aos="fade-right" data-aos-delay="200">
         <div class="profile-image-wrapper">
           <div class="profile-image">
-            <img src="https://raw.githubusercontent.com/sagnikmitra/pr-testing/refs/heads/main/AISHI%20SINGHA%20ROY%20CV.png" alt="Aishi Singha Roy" class="img-fluid">
+            <img src="https://raw.githubusercontent.com/sagnikmitra/pr-testing/refs/heads/main/AISHI%20SINGHA%20ROY%20CV.png" alt="Aishi Ghosh Dastidar" class="img-fluid">
           </div>
           <div class="signature-section">
-            <p class="quote">My mission is to bring grassroots experience into governance and help build a healthier, empowered, and self-reliant Bengal.</p>
+            <p class="quote">My mission is to bring grassroots experience into governance and help build a healthier, empowered, and self-reliant India.</p>
           </div>
         </div>
       </div>
@@ -165,8 +165,8 @@
       <div class="col-lg-7" data-aos="fade-left" data-aos-delay="300">
         <div class="about-content">
           <div class="intro">
-            <h2>Hi, I'm Aishi Singha Roy</h2>
-            <p>Currently operating Burdwan Apollo Hospital, a leading multi-speciality healthcare centre, and leading integrated healthcare initiatives under The Apollo Ltd., including Apollo Medpharma and Bellview Healthcare. I also serve as the President of ABCD Trust, focusing on rural health, women empowerment, and education across Bengal.</p>
+            <h2>Hi, I'm Aishi Ghosh Dastidar</h2>
+            <p>Currently operating Burdwan Apollo Hospital, a leading multi-speciality healthcare centre, and leading integrated healthcare initiatives under The Apollo Ltd., including Apollo Medpharma and Bellview Healthcare. I also serve as the President of ABCD Trust, focusing on rural health, women empowerment, and education across India.</p>
           </div>
 
           <div class="skills-grid">
@@ -204,7 +204,7 @@
             </div>
             <div class="timeline-item">
               <div class="year">Present</div>
-              <div class="description">Running Burdwan Apollo Hospital & leading The Apollo Ltd.’s integrated initiatives across Bengal</div>
+              <div class="description">Running Burdwan Apollo Hospital & leading The Apollo Ltd.’s integrated initiatives across India</div>
             </div>
           </div>
 
@@ -359,7 +359,7 @@
       <div class="col-lg-4">
         <div class="skills-summary" data-aos="fade-left" data-aos-delay="200">
           <h3>Professional Expertise</h3>
-          <p>Experienced healthcare leader and social impact advocate with expertise in hospital administration, public health, and grassroots initiatives across Bengal.</p>
+          <p>Experienced healthcare leader and social impact advocate with expertise in hospital administration, public health, and grassroots initiatives across India.</p>
 
           <div class="summary-stats">
             <div class="stat-item" data-aos="zoom-in" data-aos-delay="300">
@@ -424,7 +424,7 @@
         <div class="experience-section">
           <div class="section-header">
             <h2><i class="bi bi-briefcase"></i> Professional Journey</h2>
-            <p class="section-subtitle">A track record of leadership in hospitals and healthcare advancement across Bengal.</p>
+            <p class="section-subtitle">A track record of leadership in hospitals and healthcare advancement across India.</p>
           </div>
 
           <div class="experience-cards">
@@ -494,9 +494,19 @@
               <div class="timeline-marker"></div>
               <div class="education-content">
                 <div class="degree-header">
+                  <h3>Research Scholar</h3>
+                </div>
+                <h4 class="institution">Kalinga University</h4>
+              </div>
+            </div>
+
+            <div class="education-item" data-aos="slide-up" data-aos-delay="300">
+              <div class="timeline-marker"></div>
+              <div class="education-content">
+                <div class="degree-header">
                   <h3>Master’s Degree</h3>
                 </div>
-                <h4 class="institution">St. Paul’s College, Kolkata</h4>
+                <h4 class="institution">NSOU, Kolkata</h4>
               </div>
             </div>
 
@@ -506,7 +516,7 @@
                 <div class="degree-header">
                   <h3>Bachelor’s Degree</h3>
                 </div>
-                <h4 class="institution">St. Paul’s College, Kolkata</h4>
+                <h4 class="institution">NSOU, Kolkata</h4>
               </div>
             </div>
 
@@ -567,6 +577,7 @@
             <i class="bi bi-hospital"></i>
           </div>
           <h3>Burdwan Apollo Hospital</h3>
+          <h3>Unit = 2 Hospital (Murshidabad)</h3>
           <p>Leading a premier multi-speciality hospital providing quality and affordable healthcare across Purba Bardhaman and surrounding regions.</p>
         </div>
       </div><!-- End Initiative Item -->
@@ -600,7 +611,7 @@
             <i class="bi bi-people"></i>
           </div>
           <h3>ABCD Trust</h3>
-          <p>Public charitable NGO focused on women's empowerment, rural health camps, and education access across underserved regions of Bengal.</p>
+          <p>Public charitable NGO focused on women's empowerment, rural health camps, and education access across underserved regions of India.</p>
         </div>
       </div><!-- End Initiative Item -->
 
@@ -622,7 +633,7 @@
             <i class="bi bi-globe"></i>
           </div>
           <h3>Integrated Rural Healthcare Network</h3>
-          <p>Creating a digitally connected healthcare ecosystem across 330 blocks in Bengal with centralized patient records and pharmacy integration.</p>
+          <p>Creating a digitally connected healthcare ecosystem across 330 blocks in India with centralized patient records and pharmacy integration.</p>
         </div>
       </div><!-- End Initiative Item -->
 
@@ -635,7 +646,7 @@
 
   <div class="container section-title">
     <h2>Contact</h2>
-    <p>Feel free to reach out for collaborations, healthcare initiatives, or grassroots impact programs across Bengal.</p>
+    <p>Feel free to reach out for collaborations, healthcare initiatives, or grassroots impact programs across India.</p>
   </div>
 
   <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -644,15 +655,14 @@
       <div class="col-lg-5">
         <div class="info-box" data-aos="fade-up" data-aos-delay="200">
           <h3>Contact Info</h3>
-          <p>I'm based in Purba Bardhaman and open to working on meaningful healthcare and public welfare initiatives across Bengal.</p>
+          <p>I'm based in Purba Bardhaman and open to working on meaningful healthcare and public welfare initiatives across India.</p>
 
           <div class="info-item" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
               <i class="bi bi-geo-alt"></i>
             </div>
             <div class="content">
-              <h4>Location</h4>
-              <p>Kantapur Dakshin, Memari<br>P.O - Chotkhanda, P.S - Memari<br>Purba Bardhaman, West Bengal 713146</p>
+              <h4>Location</h4>41, R.B. Ghosh Road, Khoshbagan<br>Purba Bardhaman, West Bengal 713101</p>
             </div>
           </div>
 
@@ -662,7 +672,7 @@
             </div>
             <div class="content">
               <h4>Phone Number</h4>
-              <p>+91 74777 14447</p>
+              <p>+91 74777 14447 & +91 99339 39344</p>
             </div>
           </div>
 
@@ -726,7 +736,7 @@
   <footer id="footer" class="footer dark-background">
   <div class="container">
     <div class="copyright text-center">
-      <p>© <span>2025</span> <strong class="px-1 sitename">Aishi Singha Roy</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>2025</span> <strong class="px-1 sitename">Aishi Ghosh Dastidar</strong> <span>All Rights Reserved</span></p>
     </div>
     <div class="social-links d-flex justify-content-center">
       <a href="#"><i class="bi bi-linkedin"></i></a>
@@ -734,7 +744,7 @@
       <a href="mailto:aishigd@gmail.com"><i class="bi bi-envelope-at"></i></a>
     </div>
     <div class="credits text-center">
-      <span>Website powered by Zephyrus Studio | Baselined by Bootstrapmade | Customized for public healthcare & impact initiatives in Bengal</span>
+      <span>Website powered by Zephyrus Studio | Baselined by Bootstrapmade | Customized for public healthcare & impact initiatives in India</span>
     </div>
   </div>
 </footer>
